--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,3 +5,11 @@
     font-family: "Times New Roman", Arial, sans-serif;
 }
 
+.lightTweet {
+    background-color:  #e8f5fd;
+}
+
+.darkTweet {
+    background-color: #e9e9e9;
+}
+
