--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+#divTimeline {
+    margin: 2%;
+}
+
 #title {
     text-align: center;
     font-size: 40pt;
@@ -15,19 +19,21 @@
 
 .img-circle {
     border-radius: 50%;
-    height: 75px;
-    width: 75px;
+    height: 60px;
+    width: 60px;
 }
 
 figure {
-    width: 20%;
-    margin-right: 2%;
+    width: 10%;
+    text-align: center;
     float: left;
 }
 
 .tweetContent {
-    width: 60%;
-    float: left;
+    height: 30pt;
+    /*width: 75%;
+    float: right;
+    margin: auto;*/
 }
 
 .clearfix {
@@ -37,6 +43,7 @@ figure {
 .imageCaption {
     font-size: 15pt;
     font-weight: bold;
+    text-align: center;
 }
 
 #screenName {
@@ -47,4 +54,6 @@ figure {
 #timeDiv {
     font-style: italic;
     font-size: 10pt;
+    padding-top: 25pt;
+    padding-bottom: 5pt;
 }
