--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,11 +17,11 @@
     border-bottom: 1px black solid;
 }
 
-#lightTweet {
+.lightTweet {
     background-color:  #e8f5fd;
 }
 
-#darkTweet {
+.darkTweet {
     background-color: #e9e9e9;
 }
 
@@ -31,7 +31,7 @@
     width: 60px;
 }
 
-figure {
+.userContent {
     width: 140px;
     text-align: center;
     float: left;
