--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,11 @@
 .divTimeline {
+    border: none;
+}
+
+.divTimeline.divTimelineWithContent {
     margin: 25px;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .title {
