--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,17 +40,14 @@
 .userContent {
     width: 140px;
     text-align: center;
-    float: left;
+    display: inline-block;
     margin-left: 10px;
     margin-right: 50px;
 }
 
 .tweetContent {
+    display: inline-block;
     height: 30pt;
-}
-
-.clearfix {
-    clear: both;
 }
 
 .imageCaption {
