--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,8 +40,7 @@
     width: 140px;
     text-align: center;
     display: inline-block;
-    margin-left: 10px;
-    margin-right: 50px;
+    margin: 1em 50px 1em 10px;
 }
 
 .tweetContent {
@@ -64,6 +63,5 @@
 .timeDiv {
     font-style: italic;
     font-size: 10pt;
-    padding-top: 20px;
-    padding-bottom: 5pt;
+    margin: 20px 0 5px; 
 }
