--- a/app/styles/css/style.css
+++ b/app/styles/css/style.css
@@ -1,63 +1,43 @@
-.divTimelineWithContent {
-    margin: 25px;
-    border: 1px black solid;
-}
-
 .title {
-    text-align: center;
-    font-size: 40pt;
-    font-weight: bold;
-    font-family: "Times New Roman", Arial, sans-serif;
-}
+  text-align: center;
+  font-size: 40pt;
+  font-weight: bold;
+  font-family: "Times New Roman", Arial, sans-serif; }
+
+.divTimelineWithContent {
+  margin: 25px;
+  border: 1px black solid; }
 
 .getTimelineButton {
-    margin: 25px;
-}
+  margin: 25px; }
 
 .tweetDiv {
-    border-bottom: 1px #C0C0C0 solid;
-}
-
-.tweetDiv:nth-child(odd) {
-    background-color:  #e8f5fd;
-}
-
-.tweetDiv:nth-child(even) {
-    background-color: #e9e9e9;
-}
-
-.img-circle {
-    border-radius: 50%;
-    height: 60px;
-    width: 60px;
-}
-
-.userContent {
+  border-bottom: 1px #C0C0C0 solid; }
+  .tweetDiv:nth-child(odd) {
+    background-color: #e8f5fd; }
+  .tweetDiv:nth-child(even) {
+    background-color: #e9e9e9; }
+  .tweetDiv .userContent {
     width: 140px;
     text-align: center;
     display: inline-block;
-    margin: 1em 50px 1em 10px;
-}
-
-.tweetContent {
+    margin: 1em 50px 1em 10px; }
+    .tweetDiv .userContent .img-circle {
+      border-radius: 50%;
+      height: 60px;
+      width: 60px; }
+    .tweetDiv .userContent .imageCaption {
+      font-size: 15pt;
+      font-weight: bold;
+      text-align: center; }
+    .tweetDiv .userContent .screenName {
+      font-size: 10pt;
+      font-weight: normal; }
+  .tweetDiv .tweetContent {
     position: relative;
     top: -35px;
-    display: inline-block;
-}
-
-.imageCaption {
-    font-size: 15pt;
-    font-weight: bold;
-    text-align: center;
-}
-
-.screenName {
-    font-size: 10pt;
-    font-weight: normal;
-}
-
-.timeDiv {
-    font-style: italic;
-    font-size: 10pt;
-    margin: 20px 0 5px;
-}
+    display: inline-block; }
+    .tweetDiv .tweetContent .timeDiv {
+      font-style: italic;
+      font-size: 10pt;
+      margin: 20px 0 5px; }
