get timeline on page load

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -16,7 +16,7 @@ $border-color: #C0C0C0;
 }
 
 .getTimelineButton {
-    margin: 25px;
+    margin-left: 25px;
 }
 
 @mixin background-color($color) {
