create some react functions for user content

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -36,7 +36,7 @@ $border-color: #C0C0C0;
         text-align: center;
         display: inline-block;
         margin: 1em 50px 1em 10px;
-        .img-circle {
+        .ProfilePic {
             border-radius: 50%;
             height: 60px;
             width: 60px;
