--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -2,6 +2,7 @@ $font-stack: "Times New Roman", Arial, sans-serif;
 $light-color: #e9e9e9;
 $dark-color: #e8f5fd;
 $border-color: #C0C0C0;
+$left-margin: 10px;
 
 .title {
   text-align: center;
@@ -10,16 +11,20 @@ $border-color: #C0C0C0;
   font-family: $font-stack;
 }
 
-.getTimelineButton {
-   margin-left: 10px;
-}
-
 @mixin background-color($color) {
    background-color: $color;
 }
 
+.getHomeTimelineButton {
+   margin-left: 10px;
+}
+
+.ServerError {
+  margin: $left-margin;
+}
+
 .divTimeline {
-  margin: 10px;
+  margin: $left-margin;
   border: 1px black solid;
   .Tweet {
     border-bottom: 1px $border-color solid;
