nested asnyc call to get react component to render

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -33,7 +33,7 @@ $left-margin: 10px;
     display: inline-block;
   }
 
-  .divTimeline {
+  .Timeline {
     margin: $left-margin;
     border: 1px black solid;
     .Tweet {
