--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -27,6 +27,7 @@ $margin: 10px;
 }
 
 .TimelineContainer {
+  margin-top: 40px;
   position: relative;
 
   &.UserTimeline {
@@ -34,7 +35,7 @@ $margin: 10px;
     width: 45%;
     .getTimelineButton {
       position: absolute;
-      top: -2 * $margin;
+      top: 7 * $margin;
       right: $margin;
     }
     .Tweet {
@@ -47,7 +48,7 @@ $margin: 10px;
     width: 55%;
     .getTimelineButton {
       position: absolute;
-      top: -2 * $margin;
+      top: 7 * $margin;
       left: $margin;
     }
     .Tweet {
@@ -56,7 +57,8 @@ $margin: 10px;
   }
 
   .TimelineHeader {
-    margin: $margin;
+    margin-bottom: 50px;
+    text-align: center;
   }
 
   .Timeline {
