--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -87,6 +87,7 @@ $margin: 10px;
         }
       }
       .TweetContent {
+        width: 70%;
         position: relative;
         top: -35px;
         display: inline-block;
