--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -98,6 +98,11 @@ $tab-color: #f1f1f1;
       }
     }
 
+    &.PostTweet {
+      textarea {
+        width: 500px;
+      }
+    }
 
     .Tweet {
       @include tweet-color($Home-light, $Home-dark);
