--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -56,16 +56,27 @@ $tab-color: #f1f1f1;
   text-align: center;
 }
 
+@mixin PostTweetSizing() {
+  width: 500px;
+  height: 75px;
+  margin: auto;
+}
 
 .PostTweet {
+  @include PostTweetSizing();
 
-  textarea {
-    resize: none;
-    width: 500px;
-    height: 75px;
-    display: block;
-    margin-left: auto;
-    margin-right:auto;
+  .tweetBoxCharCount {
+    position: relative;
+
+    textarea {
+      @include PostTweetSizing();
+      resize: none;
+   }
+
+    .CharCount {
+      position: absolute;
+      right: 0;
+    }
   }
 }
 
