add Post tweet button

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -73,7 +73,7 @@ $tab-color: #f1f1f1;
       resize: none;
    }
 
-    .CharCount {
+    .PostTweetButton {
       position: absolute;
       right: 0;
     }
