--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -8,6 +8,9 @@ $margin: 10px;
 $tab-border-color: #ccc;
 $tab-hover-color: #ddd;
 $tab-color: #f1f1f1;
+$post-tweet-width: 500px;
+$post-tweet-height: 75;
+
 
 .title {
   text-align: center;
@@ -56,31 +59,34 @@ $tab-color: #f1f1f1;
   text-align: center;
 }
 
-@mixin PostTweetSizing() {
-  width: 500px;
-  height: 75px;
+@mixin PostTweetSizing($post-tweet-width, $post-tweet-height) {
+  width: $post-tweet-width;
+  height: $post-tweet-height;
   margin: auto;
 }
 
 .PostTweet {
-  @include PostTweetSizing();
+  @include PostTweetSizing($post-tweet-width, $post-tweet-height);
 
   .tweetBoxCharCount {
-    @include PostTweetSizing();
+    @include PostTweetSizing($post-tweet-width, $post-tweet-height);
     position: relative;
 
     textarea {
-      width: 100%;
-      height: 100%;
+      $border-width: 1px;
+      border-width: $border-width;
+      width: $post-tweet-width - $border-width;
+      height: $post-tweet-height - $border-width;
       resize: none;
+      padding: 0;
     }
 
     .CharCount {
       position: absolute;
-      right: 0;
+      right: 3px;
       font-size: small;
       color: gray;
-      bottom: 5px;
+      bottom: 6px;
     }
 
     .PostTweetButton {
