--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -9,7 +9,7 @@ $tab-border-color: #ccc;
 $tab-hover-color: #ddd;
 $tab-color: #f1f1f1;
 $post-tweet-width: 500px;
-$post-tweet-height: 75;
+$post-tweet-height: 75px;
 
 
 .title {
@@ -75,8 +75,8 @@ $post-tweet-height: 75;
     textarea {
       $border-width: 1px;
       border-width: $border-width;
-      width: $post-tweet-width - $border-width;
-      height: $post-tweet-height - $border-width;
+      width: $post-tweet-width - (2 * $border-width);
+      height: $post-tweet-height - (2 * $border-width);
       resize: none;
       padding: 0;
     }
