--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -47,6 +47,10 @@ $post-tweet-height: 75px;
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+
+    &#focused {
+      background-color: darkgray;
+    }
   }
 
   & button:hover {
