change focused flag to CSS class because kevin has something against ids

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -48,7 +48,7 @@ $post-tweet-height: 75px;
     transition: 0.3s;
     font-size: 17px;
 
-    &#focused {
+    &.focused {
       background-color: darkgray;
     }
   }
