remove hasNoTweets flag

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -102,6 +102,11 @@ $post-tweet-height: 75px;
     &.failure {
       color: red;
     }
+
+    &:after {
+      display: block;
+      clear: both;
+    }
   }
 }
 
