--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -195,14 +195,20 @@ $post-tweet-height: 75px;
 
       .TweetContent {
         width: 70%;
-        position: relative;
-        top: -35px;
         display: inline-block;
+        position: relative;
+        top: 5px;
 
         .timeDiv {
           font-style: italic;
           font-size: 10pt;
           margin: 20px 0 5px;
+        }
+
+        .replyButton {
+          height: 20px;
+          width: 20px;
+          margin-top: 20px;
         }
       }
     }
