swap out button for font awesome image

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -210,6 +210,10 @@ $post-tweet-height: 75px;
           width: 20px;
           margin-top: 20px;
         }
+
+        .replyButton:hover {
+          color: darkgray;
+        }
       }
     }
   }
