change cursor to poitner on reply hover

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -212,6 +212,7 @@ $post-tweet-height: 75px;
         }
 
         .replyButton:hover {
+          cursor: pointer;
           color: darkgray;
         }
       }
