--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -159,6 +159,28 @@ $post-tweet-height: 75px;
 
     .Tweet {
       @include tweet-color($Home-light, $Home-dark);
+
+      .ReplyModal {
+
+        .PostTweet {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          zIndex: 9999;
+          background: #fff;
+        }
+
+        .backdrop {
+          position: absolute;
+          width: 5000px;
+          height: 5000px;
+          top: 0px;
+          left: 0px;
+          zIndex: 9998;
+          background: rgba(0, 0, 0, 0.3);
+        }
+      }
     }
   }
 
