hide reply button on user timeline

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -129,6 +129,10 @@ $post-tweet-height: 75px;
     .screenName {
       visibility: hidden;
     }
+
+    .replyButton {
+      visibility: hidden;
+    }
   }
 
   &.HomeTimeline {
