--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -163,23 +163,29 @@ $post-tweet-height: 75px;
 
     .ReplyModal {
 
-      .PostTweet {
+      .modalContent {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        zIndex: 9999;
+        top: 50px;
+        right: 10px;
+        //transform: translate(-50%, -50%);
+        z-index: 9999;
         background: #fff;
+        width: 60%;
+        height: 60%;
+
+        .replyButton {
+          visibility: hidden;
+        }
       }
 
       .backdrop {
-        position: absolute;
-        width: 5000px;
-        height: 5000px;
+        position: fixed;
+        width: 100%;
+        height: 100%;
         top: 0px;
         left: 0px;
-        zIndex: 9998;
-        background: rgba(0, 0, 0, 0.3);
+        z-index: 9998;
+        background: rgba(0, 0, 0, 0.6);
       }
     }
 
