--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,4 +1,4 @@
-$font-stack: "Times New Roman", Arial, sans-serif;
+$font-stack: Gotham, Arial, sans-serif;
 $Home-light: #e9e9e9;
 $Home-dark: #e8f5fd;
 $User-light:#1da1f2;
@@ -222,13 +222,34 @@ $post-tweet-height: 75px;
         @include tweet-styling;
         animation-duration: 1s;
         animation-name: slide-in;
-        position: absolute;
-        top: 50px;
-        right: 10px;
+        position: fixed;
+        top: 0px;
+        right: 0;
         z-index: 9999;
         background: #fff;
-        width: 60%;
-        height: 45%;
+        width: 65%;
+        height: 100%;
+
+        .close {
+          font-size: 16pt;
+          text-align: right;
+          margin-right: 10px;
+          margin-top: 5px;
+        }
+
+        .close:hover {
+          cursor: pointer;
+        }
+
+        .modalHeader {
+          text-align: center;
+          font-family: $font-stack;
+        }
+
+        .Tweet {
+          background-color: white;
+          border-bottom: none;
+        }
 
         .replyButton {
           visibility: hidden;
